Small tweaks to the server config

--- a/server.cfg
+++ b/server.cfg
@@ -9,10 +9,11 @@ seta sv_hostname "Quake 3 Server"
 seta g_motd "Ready to fight?"
 
 // Slots
-seta sv_maxClients 16
-seta sv_privateClients 6
+seta sv_maxclients 16
+seta sv_privateClients 0
 seta sv_privatePassword "supersafe"
 seta g_syncronousClients 0
+seta sv_pure 1
 seta g_allowvote 1
 
 // Game settings
@@ -20,7 +21,7 @@ seta g_quadfactor 4
 seta g_gametype 0
 seta timelimit 15
 seta fraglimit 50
-seta g_weaponrespawn 3
+seta g_weaponrespawn 5
 seta g_inactivity 3000
 
 seta pmove_fixed 1
